--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "se_tags_react_demo",
+  "name": "stack_overflow_tags_viewer",
   "version": "0.0.1",
-  "description": "A lightweight React application designed to retrieve and showcase tags from the Stack Exchange API.",
+  "description": "A lightweight React application designed to retrieve and showcase StackOverflow tags from the Stack Exchange API.",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
