--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A lightweight React application designed to retrieve and showcase StackOverflow tags from the Stack Exchange API.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
-    "build": "webpack --config webpack/webpack.config.js --env env=prod",
+    "start": "webpack serve --config webpack.config.js --env env=dev",
+    "build": "webpack --config webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
